# WeighBox

./: CMakeLists.txt  README.md
app/: Base.cpp  CMakeLists.txt  MainApp.cpp
app/config/: CMakeLists.txt  DeviceConfig.cpp
app/device/: CMakeLists.txt
app/log/: CMakeLists.txt
app/network/: AppData.cpp  MqttThread.cpp
app/utility/: CMakeLists.txt  Utility.cpp
include/base/: Base.h  Version.h
include/config/: DeviceConfig.h
include/network/: AppData.h  MqttThread.h
include/utility/: Utility.h
lib/: README.md
lib/arm/mosquitto/: libmosquitto.so.2.0.18  libmosquittopp.so.2.0.18
lib/arm/openssl/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
lib/linux/mosquitto/: libmosquittopp.so.2.0.18
lib/linux/openssl/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
lib/macos/mosquitto/: libmosquitto.2.0.18.dylib  libmosquittopp.dylib
lib/macos/openssl/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
